--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,15 @@
-# Python cache
+# Ignore datasets
+data/raw/
+data/sample/
+data/processed/
+
+# Ignore environment files
+*.env
+
+# Ignore temporary files
+.ipynb_checkpoints/
 __pycache__/
 *.pyc
 
-# Environment folders
-env/
-venv/
-.venv/
-envs/
-
-# Data
-data/processed/
-data/interim/
-models/
-*.pkl
-*.h5
-
-# Jupyter
-.ipynb_checkpoints/
-
-# IDE / OS
+# VS Code settings
 .vscode/
-.idea/
-.DS_Store
