--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -5,16 +5,18 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     gcc \
     git \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements-api.txt .
+RUN pip install --no-cache-dir -r requirements-api.txt
+
 
 COPY Api ./Api
 COPY models ./models
 COPY data ./data
 
-
 EXPOSE 8000
 
 CMD ["uvicorn", "Api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
